Fixed array refresh when window resizes vertically and dropdown list going off screen on small devices

--- a/src/AlgoContest/css/SortVisualizer.css
+++ b/src/AlgoContest/css/SortVisualizer.css
@@ -205,9 +205,11 @@
     float: left;
     border-style: hidden solid hidden hidden;
   }
+}
 
+@media only screen and (max-width: 480px) {
   .dropdown-content button {
     padding-top: 1px;
-    padding-bottom: 2px;
+    padding-bottom: 1px;
   }
 }
